syntax = "proto3";

package pb;

option go_package = "github.com/HoangLong2502/pharmago_be/pb";
import "entities/medical_record.proto";

message DetailMedicalRecordRequest {
    int32 id = 1;
}

message DetailMedicalRecordResponse {
    int32 code = 1;
    string message = 2;
    MedicalRecord details = 3;
}